login and signup flow integrated with user profile management